issue fixed: Unnecessary horizontal scroll bar displayed on drag and drop custom question template

--- a/WebContent/styles/testGenMain.css
+++ b/WebContent/styles/testGenMain.css
@@ -879,7 +879,6 @@ ol {
 
 #tree2-root {
 	width: 100%;
-	overflow-y: auto;
 	display: inline-block;
 }
 
